# classiflow

./: .Rhistory  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.streamlit  Dockerfile.ui  LICENSE  MANIFEST.in  README.md  UPGRADE_PLAN.md  docker-compose.yml  generate_test_data.R  mkdocs.yml  mlflow.db  pyproject.toml  rebuild_ui.sh  requirements.txt
.classiflow/: ui.db
classiflow-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
classiflow-ui/src/: index.css  main.tsx
data/: iris_data.csv  tasks.json  tasks_auto.json
docs/: ARCHITECTURE.md  CHANGELOG_v0.2.0.md  CHOOSING_MODE_ENGINE.md  COMPATIBILITY_QUICK_REFERENCE.md  CUSTOM_TASKS_GUIDE.md  DATA_COMPATIBILITY_GUIDE.md  DELIVERABLES.md  ENVIRONMENT.md  FIXES.md  HIERARCHICAL_TRAINING.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PRODUCTION_FEATURES.md  PRODUCTION_RELEASE.md  PROJECT_FULL_CYCLE.md  PROJECT_QUICKSTART.md  QUICK_START_CUSTOM_TASKS.md  REFACTOR_SUMMARY.md  SMOTE_COMPARISON_GUIDE.md  SMOTE_IMPLEMENTATION_SUMMARY.md  SMOTE_QUICK_START.md  STATS_CLUSTERING_FEATURE.md  STATS_MIGRATION_GUIDE.md  STATS_MODULE_DOCUMENTATION.md  TRACKING_GUIDE.md  index.md  interactive-charts.md
docs/adr/: 0001-binary-stats-tests.md  0002-hierarchical-meta-leakage-fixes.md  0003-binary-inference-predicted-label-proba.md  0004-project-promotion-gates-opt-in-calibration.md  0005-promotion-gate-templates.md  0006-multiclass-metrics-for-promotion-gates.md  0007-project-config-mode-engine-schema.md  0008-calibration-metrics-binary-probability-fix.md  0009-mode-specific-calibration-metrics.md  0010-meta-calibration-auto-disable-policy.md  0011-probability-quality-checks-technical-report.md  0012-probability-quality-checks-all-modes.md  0013-mcc-coverage-meta-hierarchical-training-outputs.md  0014-meta-binary-learner-health-report.md  0015-meta-validation-label-agnostic-features.md  0016-project-meta-custom-tasks-bootstrap.md  README.md
docs/api/: config.md  index.md  training.md
docs/change-management/: README.md  artifacts.md  backends.md  bundles.md  classiflow.md  cli.md  config.md  data.md  evaluation.md  inference.md  io.md  lineage.md  metrics.md  models.md  plots.md  projects.md  splitting.md  stats.md  streamlit_app.md  tasks.md  tracking.md  training.md  ui_api.md  validation.md
docs/cli/: PROJECT.md  bundle.md  index.md  infer.md  stats.md  train-binary.md  train-hierarchical.md  train-meta.md  train-multiclass.md
docs/clinical/: META_CLASSIFIER_GUIDANCE.md
docs/concepts/: index.md  metrics-interpretation.md  pipeline-boundaries.md  reproducibility.md  resampling-vs-weighting.md  what-is-a-run.md
docs/getting-started/: installation.md  quickstart.md
docs/how-to/: class-imbalance.md  compare-runs.md  configure-run.md  custom-models.md  customize-metrics.md  customize-plots.md  export-results.md  index.md
docs/stylesheets/: extra.css
docs/tutorials/: binary-classification.md  cross-validation.md  imbalanced-data.md  index.md  methods-tables.md  multiclass-classification.md  publication-figures.md
notebooks/: 01_embry_methyl_multiclass_sklearn_conservative_gate.ipynb  02_mrs_mb_meta_sklearn_technical_research_exploratory.ipynb  03_liquid_biopsy_fragmentomic_mb_meta_sklearn_technical_confirm_rulein.ipynb
src/classiflow/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  test_ui_api.py
(+297 files in other folders)
